comment out demo changes

--- a/app/assets/stylesheets/components/pins/_create-edit-pins.scss
+++ b/app/assets/stylesheets/components/pins/_create-edit-pins.scss
@@ -141,8 +141,7 @@
 
 
 .b-img-r2 {
-  // border-radius: none;
-  border-radius: 0 0 12px 0;
+  border-radius: 0px 0px 12px 0px;
   margin-top: 4px;
 }
 
@@ -165,6 +164,6 @@
 }
 
 .b-img-r1 {
-  border-radius: 0 12px 0 0;
+  border-radius: 0px 12px 0px 0px;
   margin-bottom: 4px;
 }
