--- a/app/assets/stylesheets/components/pins/_show-pin.scss
+++ b/app/assets/stylesheets/components/pins/_show-pin.scss
@@ -49,7 +49,7 @@
 .pin-show-left img{
   display: flex;
   width: 100%;
-  height: fit-content;
+  // height: fit-content;
   box-shadow: 6px 6px 10px 0 rgba(102, 75, 75, 0.4)
 }
 
