--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,8 +25,9 @@
 
 //Components
 @import 'components/profile/profile.scss';
-@import 'components/boards/create-edit-boards';
-@import 'components/pins/create-edit-pins';
+@import 'components/pins/_create-pin.scss';
+@import 'components/pins/_index-pin.scss';
+@import 'components/pins/_show-pin.scss';
 @import 'components/_modal.scss';
 @import 'components/_navbar.scss';
 @import 'components/_session.scss';
