--- a/app/assets/stylesheets/components/pins/_show-pin.scss
+++ b/app/assets/stylesheets/components/pins/_show-pin.scss
@@ -59,17 +59,19 @@
   width: 50%;
   align-items: center;
   margin-left: 25px;
+  
 }
 
 .pin-show-description {
-  width: 120%;
+  width: 100%;
 }
 
 
-.board-show {
+.pin-show .board-show {
   display: flex;
   font-family: 'Roboto', sans-serif;
 }
+
 .board-show-description {
   margin-top: 6px;
   opacity: 30%;
@@ -87,20 +89,14 @@
 
 .pin-show-title {
  color: #333333;
- font-size: 28px;
- font-weight: 700;
+ font-size: 24px;
+ font-weight: 600;
 }
 
 .pin-show-info-container {
   display: flex;
   flex-direction: column;
   width: 100%;
-  align-content: space-around;
-}
-
-.pin-delete-button-container {
-  display: absolute;
-  align-self: flex-end;
 }
 
 .pin-delete-button {
@@ -111,9 +107,9 @@
   cursor: pointer;
   color:rgba(91, 91, 91, 0.3);
   box-shadow: none;
-  position: relative;
-  bottom: -10px;
-  right: 0px;
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
 }
 
 .pin-delete-button button {
@@ -125,6 +121,8 @@
   margin-bottom: 15px;
   margin-right: 6px;
   width: 100%;
+  opacity: 70%;
+  stroke: 2px;
 }
 
 .fa-times-circle {
@@ -144,7 +142,6 @@
   color:red;
 }
 
-
 .modal-close-x {
   position: absolute;
   background: transparent;
@@ -154,6 +151,7 @@
   cursor: pointer;
   right: 0px;
   transform: scaleX(120%);
+  z-index: 800;
 }
 
 .form-modal-close-x {
@@ -170,10 +168,40 @@
 
 .modal-close-x:hover {
   color: #e60023;
-   transform: scaleX(130%) scaleY(110%);
+  transform: scaleX(130%) scaleY(110%);
 }
 
 .form-modal-close-x:hover {
   color: #e60023;
-   transform: scaleX(130%) scaleY(110%);
+  transform: scaleX(130%) scaleY(110%);
+}
+
+.pin-show-board-link {
+  display: flex;
+  background: transparent;
+  box-shadow: none;
+  padding: 0px !important;
+  color: rgba(91, 91, 91, 0.6);
+  border-radius: none !important;
+  right: 20px;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.pin-show-board-link:hover {
+  color: #e60023;
+  transform: scale(1.02);
+}
+
+#board-back {
+  position: absolute;
+  transform: scale(1.3);
+  color: rgba(91, 91, 91, 0.3);
+  top: 28px;
+  cursor: pointer;
+}
+
+#board-back:hover {
+  color: #e60023;
+  transform: scaleX(130%) scaleY(110%);
 }
