--- a/app/assets/stylesheets/components/pins/_create-pin.scss
+++ b/app/assets/stylesheets/components/pins/_create-pin.scss
@@ -139,61 +139,143 @@ margin-bottom: 4px;
   align-self: center;
 }
 
-.create-submit button {
-  position: relative;
-  left: 50%;
-  margin-left: -25px;
-  margin-top: 25px;
-  margin-bottom: 10px;
-}
+// .create-submit button {
+//   position: relative;
+//   left: 50%;
+//   margin-left: -25px;
+//   margin-top: 25px;
+//   margin-bottom: 10px;
+// }
 
-.create-bt button:hover {
-   filter: brightness(85%);
-}
+// .create-bt button:hover {
+//    filter: brightness(85%);
+// }
 
-.upload-image {
-  background-color: rgba(152, 183, 194, 0.082);
-  // width: 450px;
-  // height: 100px;
-  box-sizing: border-box;
-  border-radius: 16px;
-  // padding: 12px;
-  font-size: 16px;
-  border: 3px solid #efefef;
-  text-align: center;
-}
+// .upload-image {
+//   background-color: rgba(152, 183, 194, 0.082);
+//   // width: 450px;
+//   // height: 100px;
+//   box-sizing: border-box;
+//   border-radius: 16px;
+//   // padding: 12px;
+//   font-size: 16px;
+//   border: 3px solid #efefef;
+//   text-align: center;
+// }
 
-.upload-image p {
-  align-self: center;
-  padding-top: 20px;
-  opacity: 50%;
-}
+// .upload-image p {
+//   align-self: center;
+//   padding-top: 20px;
+//   opacity: 50%;
+// }
 
-.file-upload-button {
-  background-color:blue;
-}
+// // .file-upload-button {
+// //   background-color:blue;
+// // }
 
-.upload-zone {
-  // position: absolute;
-  // margin-left: -230px;
-  // padding: 0;
-  width: 100%;
-  height: 100%;
-  outline: none;
+// .upload-zone {
+//   // position: absolute;
+//   // margin-left: -230px;
+//   // padding: 0;
+//   // size:'500';
+//   width: 100%;
+//   // height: 100%;
+//   border-radius: 0px;
+//   outline: none;
+//   opacity: 100;
+// }
+
+// .upload-image:hover {
+//   border: 3px solid rgba(0, 132, 255, 0.5);
+//   background-color: rgba(153, 230, 255, 0.2);
+
+// }
+
+// .upload-image:focus {
+//   background-color: rgba(153, 230, 255, 0.2);
+// }
+
+// .create-form h2 {
+//   margin-top: 12px;
+//   margin-bottom: 6px;
+// }
+
+.file {
   opacity: 0;
+  width: 0.1px;
+  height: 0.1px;
+  position: absolute;
 }
 
-.upload-image:hover {
-  border: 3px solid rgba(0, 132, 255, 0.5);
-  background-color: rgba(153, 230, 255, 0.2);
-
+.input-button {
+  display: block;
+  // position: relative;
+  width: 200px;
+  height: 50px;
+  border-radius: 25px;
+  margin-top: 25px;
+  background: #e60023;
+  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  // align-self: center;
+  justify-content: center;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  transition: transform .2s ease-out;
+  
 }
 
-.upload-image:focus {
-  background-color: rgba(153, 230, 255, 0.2);
+// .file-input:valid { background-color: green; }
+// .file-input:invalid { background-color: red; }
+
+input:hover + label,
+input:focus + label {
+  transform: scale(1.02);
 }
 
-.create-form h2 {
-  margin-top: 12px;
-  margin-bottom: 6px;
+input:focus + label {
+  outline: 1px solid #000;
+  outline: -webkit-focus-ring-color auto 2px;
+}
+
+.file-name {
+  position: absolute;
+  bottom: -35px;
+  left: 10px;
+  font-size: 0.85rem;
+  color: #555;
+}
+
+.file-input {
+  display: flex;
+align-content: center;
+justify-content: center;
+}
+
+.create-button-container {
+   display: flex;
+align-content: center;
+justify-content: center;
+}
+
+.create-button {
+  display: block;
+  // position: relative;
+  margin-top: 25px;
+  margin-bottom: 20px;
+  width: 200px;
+  height: 50px;
+  border-radius: 25px;
+  background: #efefef;
+  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  // align-self: center;
+  justify-content: center;
+  // color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  transition: transform .2s ease-out;
 }
