finish .scss styling - fix body being a different color on resize

--- a/app/assets/stylesheets/components/site/_navbar.scss
+++ b/app/assets/stylesheets/components/site/_navbar.scss
@@ -100,15 +100,15 @@
 
 }
 
-#root {
-  // background: #FFFFFF;
-background: linear-gradient(116deg, rgba(216,216,215,1) 0%, rgba(255,255,255,0.4164040616246498) 49%, rgba(218,218,218,1) 100%);
+// #root {
+//   // background: #FFFFFF;
+// background: linear-gradient(116deg, rgba(216,216,215,1) 0%, rgba(255,255,255,0.4164040616246498) 49%, rgba(218,218,218,1) 100%);
 
-  background-color: #e0e0e0;
-//   color: #999;
-// background: rgb(131,58,180);
-// background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
-}
+//   background-color: #e0e0e0;
+// //   color: #999;
+// // background: rgb(131,58,180);
+// // background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+// }
 
 
  .animation-container img{
