--- a/app/assets/stylesheets/components/pins/_create-pin.scss
+++ b/app/assets/stylesheets/components/pins/_create-pin.scss
@@ -177,8 +177,9 @@
     border-radius: 20px;
     box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
     inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
-    padding: 18px;
-    height: 50px;
+    padding: 8px;
+    padding-left: 12px;
+    height: 72px;
     overflow-y: scroll;
 }
 
