add highlighting color to text links on splash

--- a/app/assets/stylesheets/components/pins/_show-pin.scss
+++ b/app/assets/stylesheets/components/pins/_show-pin.scss
@@ -71,6 +71,8 @@
   font-family: 'Roboto', sans-serif;
 }
 .board-show-description {
+  margin-top: 6px;
+  opacity: 30%;
   width: 120%;
   display: flex;
   align-self: center;
