--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,8 +113,8 @@ button:active {
   height: 90%;
 }
 
-body {
-  background: linear-gradient(116deg, rgba(216,216,215,1) 0%,
-  rgba(255,255,255,0.4164040616246498) 49%, rgba(218,218,218,1) 100%);
+html {
+  // background: linear-gradient(116deg, rgba(216,216,215,1) 0%,
+  // rgba(255,255,255,0.4164040616246498) 49%, rgba(218,218,218,1) 100%);
   background-color: #e0e0e0;
 }
