--- a/app/assets/stylesheets/components/pins/_index-pin.scss
+++ b/app/assets/stylesheets/components/pins/_index-pin.scss
@@ -170,3 +170,8 @@
   border-radius: 0px 12px 0px 0px;
   margin-bottom: 4px;
 }
+
+.pin-index-container {
+  margin-left: 50px;
+  margin-right: 28px;
+}
