--- a/app/assets/stylesheets/components/pins/_create-pin.scss
+++ b/app/assets/stylesheets/components/pins/_create-pin.scss
@@ -279,3 +279,33 @@ justify-content: center;
   cursor: pointer;
   transition: transform .2s ease-out;
 }
+
+.loader-container {
+  display:flex;
+  justify-content: center;
+}
+
+.loader {
+  margin-top: 30%;
+  position: fixed;
+  // display: block;
+  width: 100%;
+  height: 100%;
+  border: 8px solid #efefef;
+  border-top: 8px solid #e60023;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  opacity: 0%;
+}
+
+
+// .loader--hide {
+//   opacity: 0%;
+// }
+
+@keyframes spin {
+  0%  { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
