--- a/app/assets/stylesheets/components/pins/_show-pin.scss
+++ b/app/assets/stylesheets/components/pins/_show-pin.scss
@@ -40,13 +40,24 @@
 .pin-show-left {
   display: flex;
   width: 50%;
-  margin: 16px;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
 }
+
+
+.pin-show-left img{
+  display: flex;
+  width: 100%;
+  height: fit-content;
+}
+
 
 .pin-show-right {
   display: flex;
   width: 50%;
-  margin: 16px;
+  align-items: center;
+  margin-left: 25px;
 }
 
 .pin-show-description {
@@ -80,11 +91,14 @@
 .pin-delete-button {
   align-content: flex-end;
   padding: 0px;
-  background-color: white;
+  background-color: transparent;
   font-size: 16px;
   cursor: pointer;
   color:rgba(91, 91, 91, 0.3);
   box-shadow: none;
+  position: relative;
+  bottom: -10px;
+  right: 0px;
 }
 
 .pin-delete-button button {
@@ -95,7 +109,7 @@
   margin-top: 10px;
   margin-bottom: 15px;
   margin-right: 6px;
-  width: 120%;
+  width: 100%;
 }
 
 .fa-times-circle {
