--- a/app/assets/stylesheets/components/pins/_create-pin.scss
+++ b/app/assets/stylesheets/components/pins/_create-pin.scss
@@ -15,7 +15,9 @@
   flex-direction: column;
   justify-content: center;
   background: white;
-  width:540px;
+  min-height: 400px;
+
+  width:425px;
   padding: 20px 10px;
   border-radius:24px;
 }
@@ -68,7 +70,7 @@
 }
 .create-input-item-description {
   height: 120px;
-  width: 450px;
+  width: 400px;
   resize: none;
   font-size: 16px;
   padding: 12px;
@@ -96,9 +98,13 @@
   margin-bottom: 4px;
 }
 
+.create-form {
+  padding: 8px;
+}
+
 .create-input-item-title {
   height: 60px;
-  width: 450px;
+  width: 400px;
   resize: none;
   font-size: 16px;
   padding: 12px;
