--- a/app/assets/stylesheets/components/pins/_create-pin.scss
+++ b/app/assets/stylesheets/components/pins/_create-pin.scss
@@ -80,6 +80,7 @@
   box-sizing: border-box;
   box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
   inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+  margin-bottom: 12px;
 }
 
 .create-input-item input::placeholder {
@@ -116,6 +117,7 @@
   box-sizing: border-box;
   box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
   inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+  margin-bottom: 12px;
 }
 
 .create-input-item-title:hover {
@@ -174,10 +176,9 @@
   box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
   inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
   padding: 8px;
-  padding-left: 12px;
-  height: 72px;
+  padding-left: 16px;
+  height: 87px;
   overflow-y: scroll;
-  
 }
 
 .board-select-list::-webkit-scrollbar {
@@ -225,6 +226,36 @@ input:focus + label {
   justify-content: center;
 }
 
+.create-left .file-input{
+  margin-left: 0px;
+  margin-right: 0px;
+  justify-content: center;
+}
+
+.create-left .input-button{
+  margin-top: 15px;
+  height: 40px;
+  width: 170px;
+}
+
+.create-left{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  justify-content: center;
+  margin-left: 12px;
+}
+
+.create-right {
+  margin-right: 6px;
+}
+
+.create-left .create-button{
+  margin-top: 15px;
+  height: 40px;
+  width: 170px;
+}
+
 .create-button-container {
   display: flex;
   align-content: center;
@@ -258,8 +289,8 @@ input:focus + label {
   position: fixed;
   width: 100%;
   height: 100%;
-  border: 8px solid #efefef;
-  border-top: 8px solid #e60023;
+  border: 4px solid #efefef;
+  border-top: 4px solid #e60023;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -275,32 +306,6 @@ input:focus + label {
 .create-bottom {
   display: flex;
   flex-direction: row;
-}
-
-.create-b-left {
-  border: lime solid 2px;
-  display: flex;
-  flex-direction: column;
-}
-
-.create-b-right {
-  border: lime solid 2px;
-  display: flex
-}
-
-.board-select-item {
-  border: pink solid 2px;
-  color: lightgray;
-  cursor: pointer;
-}
-
-.board-select-item:hover {
-  color: red;
-}
-
-.board-select-item:active {
-  border: pink solid 2px;
-  color: red;
 }
 
 .create-bottom {
@@ -323,3 +328,6 @@ input:focus + label {
   flex-direction: column;
 }
 
+.board-li:hover{
+  color: #e60023;
+}
