--- a/app/assets/stylesheets/components/site/_navbar.scss
+++ b/app/assets/stylesheets/components/site/_navbar.scss
@@ -458,22 +458,24 @@ button:active {
 .board-list-arrow {
   padding:30px;
   border-radius: 100px;
-  transform: scale(.4);
+  transform: scale(.3);
   width: 60px;
   height: 82px;
   position:absolute;
-  right: 0px;
-  top: 302px;
+  right: 205px;
+  top: 340px;
   margin-top: 100;
   margin-left: 0px;
   z-index:999;
+  opacity: 85%;
+  // transform: scale();
 }
 
 .board-list-arrow path {
-  stroke: rgb(190, 190, 190);
+  stroke: rgb(212, 1, 1);
   stroke-width: 3px;
   fill: transparent;	
-  animation: down 3s 2;
+  animation: down 3s infinite;
 }
 @keyframes down{
   0% { opacity:0 }
