add pin delete button

--- a/app/assets/stylesheets/components/pins/_show-pin.scss
+++ b/app/assets/stylesheets/components/pins/_show-pin.scss
@@ -1,31 +1,39 @@
 .pin-show {
   display: flex;
-  align-items: flex-start;
+  // align-items: flex-start;
   // flex-direction: row;
   // justify-content: space-between;
   font-family: 'Roboto', sans-serif;
-  display: flex;
-  align-items: row;
+  // display: flex;
+  // align-items: center;
   flex-direction: row;
-  justify-content: flex-start;
+  // justify-content: center;
   background: white;
-  // min-height: 400px;
-  width:425px;
+  min-height: 200px;
+  min-width:425px;
+  height: auto;
   padding: 36px;
   border-radius:36px;
 
 }
 
 .pin-show-image img{
-  // width: 85%;
+  min-width: 100%;
   // margin-top: 4px;
-  vertical-align: middle;
+  display: flex;
+  // align-self: center;
+  // position: relative;
+  // vertical-align: center;
   border-radius: 16px;
+  align-self: center;
+
  
 }
 
 .pin-show-image {
   padding-right: 25px;
+   display: flex;
+  // align-self: center;
 }
 
 .pin-show-info-container {
@@ -48,9 +56,75 @@
 
 .pin-show-info-container {
   // margin-right: 50px;
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
 }
 
 .pin-show-info-container hr {
-  width: 150px;
+      height: 1px;
+      background-color: #333;
+border: none;
+  width: 200px;
   opacity: 30%;
+  margin-left: 0px;
+  border-radius: 0px;
+}
+
+.pin-delete-button-container {
+  display: flex;
+  flex-direction: row-reverse;
+    padding: 0px;
+
+}
+
+.pin-delete-button {
+
+  align-content: flex-end;
+  padding: 0px;
+  // border-radius: 0px;
+  // outline: crimson 1px;
+  //  border: 2px solid rgba(91, 91, 91, 0.3);
+  //  border-radius: 36px;
+  background-color: white;
+  // color: rgb(149, 149, 149);
+  // padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  color:rgba(91, 91, 91, 0.3);
+  // padding: 5px;
+}
+.pin-delete-button button{
+  // padding: 5px;
+  // display: flex;
+  // position: relative;
+  // align-self: flex-end;
+  // box-sizing: border-box;
+  // margin-left: 8px;
+  // margin-right: 8px;
+  // margin-top: 8px;
+  // margin-bottom: 8px;
+  // margin-left: 130px;
+  // margin-top: 80px;
+  // border-radius: 0px;
+  // border-color: rgba(91, 91, 91, 0.348);
+  // color: rgba(91, 91, 91, 0.348);
+  // padding: 0px;
+
+  display: flex;
+  // align-content: flex-end;
+  
+}
+
+.fa-times-circle {
+  display: flex;
+    padding: 0px;
+  align-self: flex-end;
+right: 50px;
+  color:rgba(91, 91, 91, 0.3);
+  font-size: 30px;
+}
+
+.fa-times-circle:hover {
+  color:red;
 }
