--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
         window.dropdownURL = "<%= image_url('dropdown.png')  %>";
         window.animation = "<%= image_url('pinterest.gif')  %>";
     </script>
+
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    
   <body>
     <%= yield %>
   </body>
