--- a/app/assets/stylesheets/components/boards/_create-edit-boards.scss
+++ b/app/assets/stylesheets/components/boards/_create-edit-boards.scss
@@ -153,11 +153,11 @@ margin-bottom: 4px;
 
 .upload-image {
   background-color: rgba(152, 183, 194, 0.082);
-  width: 450px;
-  height: 100px;
+  // width: 450px;
+  // height: 100px;
   box-sizing: border-box;
   border-radius: 16px;
-  padding: 12px;
+  // padding: 12px;
   font-size: 16px;
   border: 3px solid #efefef;
   text-align: center;
@@ -169,10 +169,14 @@ margin-bottom: 4px;
   opacity: 50%;
 }
 
-.upload-image input {
-  position: absolute;
-  margin: 0;
-  padding: 0;
+.file-upload-button {
+  background-color:blue;
+}
+
+.upload-zone {
+  // position: absolute;
+  // margin-left: -230px;
+  // padding: 0;
   width: 100%;
   height: 100%;
   outline: none;
