--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -30,8 +30,8 @@
 .modal-container img {
   justify-content: center;
   display: flex;
-  width: 32px;
-  height: 32px;
+  // width: 32px;
+  // height: 32px;
 }
 
 .modal-welcome {
