boards and pin index both render correctly.

--- a/app/assets/stylesheets/components/pins/_index-pin.scss
+++ b/app/assets/stylesheets/components/pins/_index-pin.scss
@@ -161,8 +161,84 @@
   border-radius: 0px 12px 0px 0px;
   margin-bottom: 4px;
 }
-
 .pin-index-container {
-  margin-left: 50px;
-  margin-right: 28px;
+  position: relative;
+  top: 72px;
+  column-count: 7;
+  column-gap: 24px;
+  margin: 0 24px 24px 24px;
+  z-index: 0; 
+  text-align: center;
+}
+
+.pin-index-item-container {
+  display: inline-block;
+  width: 236px;
+  margin-bottom: 18px;
+  text-align: left;
+}
+
+.pin-index-item-container:hover img {
+  filter: brightness(90%);
+}
+
+.pin-index-item-image img {
+  width: 100%;
+  border-radius: 24px;
+}
+
+.pin-index-item-title {
+  padding-top: 2px;
+  padding-left: 8px;
+}
+
+@media screen and (min-width:0){
+  .pin-index-container,
+  .profile-pin-index-container,
+  .profile-container {
+    column-count: 1;
+    top: 155px;
+  }
+}
+@media screen and (min-width:500px){
+  .pin-index-container,
+  .profile-pin-index-container {
+    column-count: 2;
+    top: 74px
+  }
+}
+
+@media screen and (min-width:750px){
+  .pin-index-container,
+  .profile-pin-index-container {
+    column-count: 3;
+  }
+}
+
+@media screen and (min-width:1000px){
+  .pin-index-container,
+  .profile-pin-index-container {
+    column-count: 4;
+  }
+}
+
+@media screen and (min-width:1250px){
+  .pin-index-container,
+  .profile-pin-index-container {
+    column-count: 5;
+  }
+}
+
+@media screen and (min-width:1500px){
+  .pin-index-container,
+  .profile-pin-index-container {
+    column-count: 6;
+  }
+}
+
+@media screen and (min-width:1700px){
+  .pin-index-container,
+  .profile-pin-index-container {
+    column-count: 7;
+  }
 }
