--- a/app/assets/stylesheets/components/pins/_index-pin.scss
+++ b/app/assets/stylesheets/components/pins/_index-pin.scss
@@ -162,29 +162,51 @@
   margin-bottom: 4px;
 }
 .pin-index-container {
-  position: relative;
-  top: 72px;
-  column-count: 7;
-  column-gap: 24px;
-  margin: 0 24px 24px 24px;
+  display: relative;
+  // position: ;
+  // top: 72px;
+  // border: 2px solid crimson;
+  // column-count: 4;
+  // column-width: 250px;
+  column-gap: 6px;
+  margin: 0px 0px 0px 0px;
   z-index: 0; 
-  text-align: center;
+  margin-left: 12px;
+  margin-right: 12px;
+  // text-align: center;
 }
 
 .pin-index-item-container {
+  // border: 2px solid rgb(20, 220, 20);
   display: inline-block;
-  width: 236px;
-  margin-bottom: 18px;
-  text-align: left;
+  width: 100%;
+  margin-bottom: 4px;
+  // text-align: left;
 }
 
+// .column img:hover {
+//     filter: brightness(75%);
+//     transform: scale(0.97);
+//     transition-delay: 0s;
+//     transition-duration: 0.025s;
+//     transition-property: transform;
+//     transition-timing-function: ease-out;
+//     vertical-align: middle;
+// }
+
 .pin-index-item-container:hover img {
-  filter: brightness(90%);
+    filter: brightness(75%);
+    transform: scale(0.97);
+    transition-delay: 0s;
+    transition-duration: 0.025s;
+    transition-property: transform;
+    transition-timing-function: ease-out;
+    vertical-align: middle;
 }
 
 .pin-index-item-image img {
   width: 100%;
-  border-radius: 24px;
+  border-radius: 42px;
 }
 
 .pin-index-item-title {
