--- a/app/assets/stylesheets/components/site/_profile-nav.scss
+++ b/app/assets/stylesheets/components/site/_profile-nav.scss
@@ -143,9 +143,11 @@
 .a-button {
    color: rgb(51, 51, 51);
    background-color:rgb(255, 255, 255);
+   margin: 8px;
 }
 
 .b-button button {
    color: rgb(255, 255, 255);
    background-color: rgb(51, 51, 51);
+   margin: 8px;
 }
