--- a/app/assets/stylesheets/components/site/_profile-nav.scss
+++ b/app/assets/stylesheets/components/site/_profile-nav.scss
@@ -155,14 +155,14 @@
 // text-align: right;
 // }
 
-.a-button {
+#b-button {
    color: rgb(51, 51, 51);
    background-color:rgb(255, 255, 255);
    margin: 8px;
 }
 
-.b-button button {
-   color: rgb(255, 255, 255);
-   background-color: rgb(51, 51, 51);
+#p-button {
+   color: rgb(51, 51, 51);
+   background-color:rgb(255, 255, 255);
    margin: 8px;
 }
