--- a/app/assets/stylesheets/components/boards/_index-board.scss
+++ b/app/assets/stylesheets/components/boards/_index-board.scss
@@ -21,6 +21,16 @@
 
 }
 
+.board-index-item-container:hover {
+  filter: brightness(75%);
+  transform: scale(0.97);
+  transition-delay: 0s;
+  transition-duration: 0.025s;
+  transition-property: transform;
+  transition-timing-function: ease-out;
+  vertical-align: middle;
+}
+
 
 .board-index-item-container { 
   background: transparent;
