--- a/app/assets/stylesheets/components/boards/_show-board.scss
+++ b/app/assets/stylesheets/components/boards/_show-board.scss
@@ -15,6 +15,7 @@
   text-align: left;
   background-color: white;
   border-radius: 12px;
+  cursor: pointer;
 }
 
 .board-index-item-image {
@@ -87,19 +88,61 @@
 
 
 .board-show-title {
+  display: flex;
  color: #333333;
+//  text-align: center;
  font-size: 28px;
  font-weight: 700;
+//  margin-bottom: 20px;
 }
 
 .board-show {
   display: flex;
   font-family: 'Roboto', sans-serif;
-  flex-direction: row;
+  flex-direction: column;
   background: white;
   min-height: 300px;
   min-width:600px;
   height: auto;
   padding: 20px;
   border-radius:36px;
+   align-items: center;
+
+}
+.board-delete-button-container {
+  display: flex;
+  flex-direction: row-reverse;
+  align-content: flex-end;
+  width: 100%;
+}
+
+.board-show .pin-index-container {
+width: 100%;
+margin-left: 0px;
+margin-right: 0px;
+}
+
+.board-delete-button {
+  align-self: flex-end;
+  display: block;
+  background: transparent;
+  box-shadow: none;
+  position: relative;
+  right: 60;
+// align-self: flex-end;
+
+}
+.board-delete-button:hover {
+
+ 
+  color: red;
+}
+
+
+.board-show hr {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  opacity: 40%;
+  // margin-right: 6px;
+  width: 100%;
 }
