--- a/app/assets/stylesheets/components/boards/_index-board.scss
+++ b/app/assets/stylesheets/components/boards/_index-board.scss
@@ -36,10 +36,12 @@
   background: transparent;
       box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.2),
     -8px -8px 18px 0 rgba(255, 255, 255, 0.55);
-  
-  
-
 }
+
+#board-index-item-left {
+margin-right: 0px !important;
+}
+
 
 // .board-index-item-container:hover {
 //   filter: brightness(90%);
