add box shadows to pin index

--- a/app/assets/stylesheets/components/pins/_index-pin.scss
+++ b/app/assets/stylesheets/components/pins/_index-pin.scss
@@ -190,7 +190,8 @@
 .pin-index-item-image img {
   width: 100%;
   border-radius: 36px;
-}
+  box-shadow: -6px 6px 10px 0 rgba(0, 0, 0, 0.2)
+  }
 
 .pin-index-item-title {
   padding-top: 2px;
