--- a/app/assets/stylesheets/components/boards/_show-board.scss
+++ b/app/assets/stylesheets/components/boards/_show-board.scss
@@ -86,6 +86,10 @@
   border-color: transparent;
 }
 
+.board-show-container {
+display: flex;
+flex-direction: column;
+}
 
 .board-show-title {
   display: flex;
@@ -106,15 +110,21 @@
   height: auto;
   padding: 20px;
   border-radius:36px;
-   align-items: center;
+  align-items: center;
+}
+// .board-delete-button-container {
+//   display: flex;
+//   flex-direction: row-reverse;
+//   align-content: flex-end;
+//   width: 100%;
+// }
 
-}
-.board-delete-button-container {
-  display: flex;
-  flex-direction: row-reverse;
-  align-content: flex-end;
-  width: 100%;
-}
+// .board-delete-button-container {
+//   display: block;
+//   position: absolute;
+//   align-self: flex-end;
+//   bottom: 500;
+// }
 
 .board-show .pin-index-container {
 width: 100%;
@@ -123,18 +133,47 @@ margin-right: 0px;
 }
 
 .board-delete-button {
-  align-self: flex-end;
-  display: block;
-  background: transparent;
+  position: absolute;
+  bottom: 5px;
+  right: 0;
+  margin-right: 10px;
+  padding: 0px;
+  background-color: transparent;
+  font-size: 16px;
+  cursor: pointer;
   box-shadow: none;
-  position: relative;
-  right: 60;
-// align-self: flex-end;
-
+  color:rgba(91, 91, 91, 0.3);
 }
-.board-delete-button:hover {
 
- 
+
+//   align-self: flex-end;
+//   display: block;
+//   // justify-self:;
+//   background: transparent;
+//   box-shadow: none;
+//   // position: relative;
+//   right: 60;
+// // align-self: flex-end;
+
+// }
+// .board-delete-button {
+//   align-content: flex-end;
+//   padding: 0px;
+//   background-color: transparent;
+//   font-size: 16px;
+//   cursor: pointer;
+//   color:rgba(91, 91, 91, 0.3);
+//   box-shadow: none;
+//   position: relative;
+//   bottom: -10px;
+//   right: 0px;
+// }
+
+// .board-delete-button button {
+//   display: flex;
+// }
+
+.board-delete-button:hover {
   color: red;
 }
 
@@ -146,3 +185,8 @@ margin-right: 0px;
   // margin-right: 6px;
   width: 100%;
 }
+
+// .board-show-container .pin-index-container{
+//   min-height: 80%;
+//   min-width: 100%;
+// }
