--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 
   <script type="text/javascript">
     window.logoURL = "<%= image_url('favicon.png')  %>";
-    window.animation = "<%= image_url('pinterest.gif')  %>";
+    window.animation = "<%= image_url('zenterest.gif')  %>";
   </script>
   
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
