--- a/app/assets/stylesheets/components/site/_navbar.scss
+++ b/app/assets/stylesheets/components/site/_navbar.scss
@@ -7,6 +7,8 @@
   position: relative;
   z-index: 1;
   text-size-adjust: 100%;
+    background: transparent;
+      box-shadow: 0px 0px 40px 0 rgba(0, 0, 0, 0.6)
 }
 
 .nav-left {
@@ -87,14 +89,31 @@
    display:hidden;
    opacity: 0%;
 }
-
- .animation {
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  }
 }
 
+.splash {
+  display: flex;
+  flex-direction: column;
+//   background: #FFFFFF;
+// background: linear-gradient(116deg, rgba(216,216,215,1) 0%, rgba(255,255,255,0.4164040616246498) 49%, rgba(218,218,218,1) 100%);
+
+}
+
+#root {
+  background: #FFFFFF;
+background: linear-gradient(116deg, rgba(216,216,215,1) 0%, rgba(255,255,255,0.4164040616246498) 49%, rgba(218,218,218,1) 100%);
+// background: rgb(131,58,180);
+// background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+}
+
+
+ .animation-container img{
+  display: flex;
+  position: absolute;
+  opacity: 100;
+  top: -100;
+  
+  }
 
 .link {
   padding-bottom: 0px;
@@ -122,6 +141,8 @@
 .red-button {
   background-color: #e60023;
   color: rgb(255, 255, 255);
+  border: none;
+  
 }
 
 .grey-button {
