--- a/app/assets/stylesheets/components/boards/_show-board.scss
+++ b/app/assets/stylesheets/components/boards/_show-board.scss
@@ -70,11 +70,19 @@
 .preview-top-empty {
    border-radius: 0 12px 0 0;
   margin-bottom: 2px;
+   
+
+    box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
 }
 
 .preview-bottom,
 .preview-bottom-empty {
+    
+
   border-radius: 0 0 12px 0;
+    box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
 }
 
 
@@ -84,6 +92,8 @@
   background-color: white;
   filter: brightness(90%);
   border-color: transparent;
+    box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
 }
 
 .board-show-container {
