--- a/app/assets/stylesheets/components/pins/_index-pin.scss
+++ b/app/assets/stylesheets/components/pins/_index-pin.scss
@@ -49,6 +49,7 @@
   float: center;
   margin-left: 50px;
   margin-bottom: 20px;
+  background-color: transparent;
 }
 
 .b-row {
@@ -190,7 +191,8 @@
 .pin-index-item-image img {
   width: 100%;
   border-radius: 36px;
-  box-shadow: 6px 6px 10px 0 rgba(0, 0, 0, 0.4)
+   box-shadow: 12px 12px 24px 0 rgba(0, 0, 0, 0.2),
+    -0px -0px 0px 0 rgba(255, 255, 255, 0.5);
   }
 
 .pin-index-item-title {
@@ -207,7 +209,7 @@
     margin-top: -8px;
     margin-bottom: 0px;
     border-radius: 8px;
-    column-gap: 5px;
+    column-gap: 10px;
   }
 }
 
@@ -215,7 +217,7 @@
   .pin-index-container,
   .profile-pin-index-container {
     column-count: 4;
-    column-gap: 8px;
+    column-gap: 10px;
     margin-bottom: 4px;
     margin-left: 20px;
     margin-right: 20px;
@@ -248,5 +250,7 @@
   .pin-index-container,
   .profile-pin-index-container {
     column-count: 4;
+    // column-gap: 12px;
+    // border-radius: 48px;
   }
 }
