--- a/app/assets/stylesheets/components/site/_navbar.scss
+++ b/app/assets/stylesheets/components/site/_navbar.scss
@@ -8,7 +8,8 @@
   z-index: 1;
   text-size-adjust: 100%;
     background: transparent;
-      box-shadow: 0px 0px 40px 0 rgba(0, 0, 0, 0.6)
+      box-shadow: 0px 0px 40px 0 rgba(0, 0, 0, 0.5);
+  
 }
 
 .nav-left {
@@ -100,8 +101,11 @@
 }
 
 #root {
-  background: #FFFFFF;
+  // background: #FFFFFF;
 background: linear-gradient(116deg, rgba(216,216,215,1) 0%, rgba(255,255,255,0.4164040616246498) 49%, rgba(218,218,218,1) 100%);
+
+  background-color: #e0e0e0;
+//   color: #999;
 // background: rgb(131,58,180);
 // background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
 }
@@ -152,7 +156,15 @@ background: linear-gradient(116deg, rgba(216,216,215,1) 0%, rgba(255,255,255,0.4
 .black-button {
    color: rgb(255, 255, 255);
    background-color: rgb(51, 51, 51);
-   margin-left: 10px;
+   margin-left: 28px;
+  cursor: pointer;
+   box-shadow: 12px 12px 24px 0 rgba(0, 0, 0, 0.2),
+    -12px -12px 24px 0 rgba(255, 255, 255, 0.5);
+}
+
+.black-button:hover  {
+
+transform: scale(1.06);
 }
 
 .drop-icon {
@@ -255,6 +267,10 @@ background: linear-gradient(116deg, rgba(216,216,215,1) 0%, rgba(255,255,255,0.4
   box-shadow: none;
 }
 
+.internal-nav-right .profile-link {
+  background-color: transparent;
+}
+
 .dropbtn {
   color: rgb(17, 17, 17);
   padding-bottom: 8px;
@@ -269,6 +285,13 @@ background: linear-gradient(116deg, rgba(216,216,215,1) 0%, rgba(255,255,255,0.4
   background-color: #ffffff;
   display: block;
   align-content: center;
+      box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+}
+
+.plus-button-container .dropbtn {
+    box-shadow: 12px 12px 24px 0 rgba(0, 0, 0, 0.2),
+    -12px -12px 24px 0 rgba(255, 255, 255, 0.5);
 }
 
 .profile-link:hover {
