--- a/app/assets/stylesheets/components/site/_profile-nav.scss
+++ b/app/assets/stylesheets/components/site/_profile-nav.scss
@@ -27,22 +27,73 @@
   height: 120px;
   width: 120px;
   display: flex;
-  background-color: #efefef;
+  background-color: #ffffff;
   border-bottom-left-radius: 50%;
   border-bottom-right-radius: 50%;
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
-  margin-top: 4px;
+  margin-top: 18px;
   margin-bottom: 4px;
   justify-content: center;
   align-items: center;
+
+
+    // box-shadow: 12px 12px 24px 0 rgba(0, 0, 0, 0.2),
+    // -12px -12px 24px 0 rgba(255, 255, 255, 0.5);
+  font-size: 5rem;
+  // width: 200px;
+  // height: 200px;
+  border-radius: 40px;
+  overflow: hidden;
+  padding: 1.3rem;
+  display: flex;
+    box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+
+
+      justify-content: space-around;
+  align-items: center;
 }
+
+// body {
+//   padding: 3rem 4rem 0;
+//   background-color: #e0e0e0;
+//   color: #999;
+//   display: flex;
+//   flex-wrap: wrap;
+//   max-width: 680px;
+//   font-family: "Arial", sans-serif;
+//   margin: 0 auto;
+// }
+
+.neumorphic {
+  box-shadow: 12px 12px 24px 0 rgba(0, 0, 0, 0.2),
+    -12px -12px 24px 0 rgba(255, 255, 255, 0.5);
+  font-size: 5rem;
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 1.3rem;
+  display: flex;
+}
+
+.neumorphic--pressed {
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+}
+
+.variation2 {
+  justify-content: space-around;
+  align-items: center;
+}
+
 
 .user-letter {
   font-family: 'Roboto', sans-serif;
   text-transform: capitalize;
   font-size: 84px;
-  color: white;
+  color: lightgray;
   
   text-align: center;
   justify-content: center;
@@ -95,7 +146,6 @@
 // }
 
 .plus-button-container {
-  background-color: white;
   margin-right: 28px;
   align-items: center;
 }
