--- a/app/assets/stylesheets/components/pins/_show-pin.scss
+++ b/app/assets/stylesheets/components/pins/_show-pin.scss
@@ -65,6 +65,20 @@
   width: 120%;
 }
 
+
+.board-show {
+   display: flex;
+  font-family: 'Roboto', sans-serif;
+  // justify-content: center;
+}
+.board-show-description {
+  width: 120%;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  // padding-top: ;
+}
+
 .pin-show-left img{
   display: relative;
   max-width: 100%;
